Use plainText for diagnostic tooltip

BUG: 475252